RESOLVED FIXED141327
REGRESSION(r179476): It broke the !ENABLE(PICTURE_SIZES) build
https://bugs.webkit.org/show_bug.cgi?id=141327
Summary REGRESSION(r179476): It broke the !ENABLE(PICTURE_SIZES) build
Csaba Osztrogonác
Reported 2015-02-06 02:17:31 PST
../../Source/WebCore/html/parser/HTMLPreloadScanner.cpp: In member function 'void WebCore::TokenPreloadScanner::StartTagScanner::processAttributes(const AttributeList&, WebCore::Document&)': ../../Source/WebCore/html/parser/HTMLPreloadScanner.cpp:110:55: error: 'm_sizesAttribute' was not declared in this scope
Attachments
Patch (1.69 KB, patch)
2015-02-11 08:30 PST, Darin Adler
ossy: review+
Csaba Osztrogonác
Comment 1 2015-02-11 07:36:56 PST
It seems nobody is interested in fixing this broken ENABLE(PICTURE_SIZES) guard. Can we remove this guard if nobody wants to build with disabled guard?
Darin Adler
Comment 2 2015-02-11 08:30:25 PST
Darin Adler
Comment 3 2015-02-11 08:41:14 PST
Note You need to log in before you can comment on or make changes to this bug.