REGRESSION(r179476): It broke the !ENABLE(PICTURE_SIZES) build https://bugs.webkit.org/show_bug.cgi?id=141327

Reviewed by Csaba Osztrogonác.

* html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttributes):
Put #if around use of m_sizesAttribute.

Canonical link: https://commits.webkit.org/159507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179928 268f45cc-cd09-0410-ab3c-d52691b4dbfc